# collection

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: code_check.yml
infra/: docker-compose-local.yaml  docker-compose.yaml
infra/backend/: Dockerfile
infra/backend/requirements/: dev.txt  prod.txt
infra/nginx/: nginx.conf
src/backend/: manage.py
src/backend/api/v1/: urls.py
src/backend/api/v1/collections/: constants.py  serializers.py  urls.py  views.py
src/backend/api/v1/general/: mixins.py
src/backend/api/v1/users/: serializers.py  views.py
src/backend/apps/collections/: admin.py  apps.py  constants.py  models.py  signals.py  validators.py
src/backend/apps/collections/migrations/: 0001_initial.py  0002_alter_payment_amount.py
src/backend/apps/general/: apps.py  models.py
src/backend/apps/general/management/commands/: upload.py
src/backend/apps/users/: constants.py  models.py
src/backend/apps/users/migrations/: 0001_initial.py
src/backend/config/: asgi.py  wsgi.py
src/backend/config/settings/: base.py  local.py  prod.py
src/backend/data/: collections.json  payments.json  reasons.json  users.json
